--- a/content/settings.json
+++ b/content/settings.json
@@ -1,23 +1,23 @@
 {
-  "store_id": 1239,
-  "name": "ofertasafins",
   "domain": "ofertasafins.netlify.app",
-  "short_name": "ofertasafins",
-  "description": "ofertasafins",
+  "currency_symbol": "R$",
   "primary_color": "#222831",
-  "secondary_color": "#393e46",
-  "bg_color": "#ffffff",
   "theme": {
     "bootswatch": "_",
     "custom": "_"
   },
+  "bg_color": "#ffffff",
   "logo": "/img/uploads/logo.png",
-  "mini_logo": "",
-  "icon": "/img/icon.png",
-  "large_icon": "/img/large-icon.png",
-  "favicon": "/img/uploads/favicon.png",
+  "name": "Promoção de Sapatos, Roupas, Bolsas e Mais",
+  "short_name": "Ofertas Afins",
   "lang": "pt_br",
   "currency": "BRL",
-  "currency_symbol": "R$",
-  "country_code": "BR"
+  "mini_logo": "",
+  "favicon": "/img/uploads/favicon.png",
+  "country_code": "BR",
+  "secondary_color": "#393e46",
+  "icon": "/img/icon.png",
+  "store_id": 1239,
+  "description": "Na Ofertas Afins você encontra as melhores marcas de sapatos, roupas, bolsas, acessórios, perfumes, produtos de beleza e decoração em promoção. Aproveite!",
+  "large_icon": "/img/large-icon.png"
 }
