Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -13,11 +13,11 @@
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
-  "favicon": "/img/uploads/favicon.png",
+  "favicon": "/img/uploads/oa.png",
   "country_code": "BR",
   "secondary_color": "#393e46",
   "icon": "/img/uploads/oa.png",
   "store_id": 1239,
   "description": "Na Ofertas Afins você encontra as melhores marcas de sapatos, roupas, bolsas, acessórios, perfumes, produtos de beleza e decoração em promoção. Aproveite!",
-  "large_icon": "/img/large-icon.png"
+  "large_icon": "/img/uploads/oa.png"
 }
