--- a/content/settings.json
+++ b/content/settings.json
@@ -7,7 +7,7 @@
     "custom": "_"
   },
   "bg_color": "#ffffff",
-  "logo": "/img/uploads/oa.png",
+  "logo": "/img/uploads/ofertas-afins.png",
   "name": "Promoção de Sapatos, Roupas, Bolsas e Mais",
   "short_name": "Ofertas Afins",
   "lang": "pt_br",
