Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -13,7 +13,7 @@
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
-  "favicon": "/img/uploads/oa.png",
+  "favicon": "/img/uploads/ofertas.png",
   "country_code": "BR",
   "secondary_color": "#393e46",
   "icon": "/img/uploads/oa.png",
