Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -16,8 +16,8 @@
   "favicon": "/img/uploads/ofertas.png",
   "country_code": "BR",
   "secondary_color": "#393e46",
-  "icon": "/img/uploads/oa.png",
+  "icon": "/img/uploads/ofertas.png",
   "store_id": 1239,
   "description": "Na Ofertas Afins você encontra as melhores marcas de sapatos, roupas, bolsas, acessórios, perfumes, produtos de beleza e decoração em promoção. Aproveite!",
-  "large_icon": "/img/uploads/oa.png"
+  "large_icon": "/img/uploads/ofertas.png"
 }
