--- a/content/settings.json
+++ b/content/settings.json
@@ -1,7 +1,7 @@
 {
   "domain": "ofertasafins.netlify.app",
   "currency_symbol": "R$",
-  "primary_color": "#51315d",
+  "primary_color": "#393e46",
   "theme": {
     "bootswatch": "_",
     "custom": "_"
