Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -8,8 +8,8 @@
   },
   "bg_color": "#ffffff",
   "logo": "/img/uploads/ofertas-afins-logo.png",
-  "name": "Promoção de Sapatos, Roupas, Bolsas e Mais",
-  "short_name": "Ofertas Afins",
+  "name": "Ofertas Afins ",
+  "short_name": "Promoção de Sapatos, Roupas, Bolsas e Mais",
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
