--- a/content/settings.json
+++ b/content/settings.json
@@ -3,7 +3,7 @@
   "currency_symbol": "R$",
   "primary_color": "#393e46",
   "theme": {
-    "bootswatch": "sandstone",
+    "bootswatch": "pulse",
     "custom": "_"
   },
   "bg_color": "#ffffff",
