Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -8,7 +8,7 @@
   },
   "bg_color": "#ffffff",
   "logo": "/img/uploads/ofertas-afins-logo.png",
-  "name": "Ofertas Afins - tudo, a toda hora, em qualquer lugar :)",
+  "name": "Ofertas Afins ",
   "short_name": "tudo, a toda hora, em qualquer lugar :)",
   "lang": "pt_br",
   "currency": "BRL",
