Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -1,5 +1,5 @@
 {
-  "domain": "ofertasafins.netlify.app",
+  "domain": "www.ofertasafins.com.br",
   "currency_symbol": "R$",
   "primary_color": "#393e46",
   "theme": {
