--- a/content/settings.json
+++ b/content/settings.json
@@ -1,7 +1,7 @@
 {
   "domain": "www.ofertasafins.com.br",
   "currency_symbol": "R$",
-  "primary_color": "#393e46",
+  "primary_color": "#51315d",
   "theme": {
     "bootswatch": "lux",
     "custom": "_"
