--- a/content/settings.json
+++ b/content/settings.json
@@ -1,13 +1,13 @@
 {
   "domain": "www.ofertasafins.com.br",
   "currency_symbol": "R$",
-  "primary_color": "#51315d",
+  "primary_color": "#171f6a",
   "theme": {
     "bootswatch": "lux",
     "custom": "_"
   },
   "bg_color": "#ffffff",
-  "logo": "/img/uploads/ofertas-afins-logo.png",
+  "logo": "/img/uploads/79d1f22f-fa9c-4cce-8ebd-d0db14594251.jpeg",
   "name": "Ofertas Afins ",
   "short_name": "tudo, a toda hora, em qualquer lugar :)",
   "lang": "pt_br",
