Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -7,13 +7,13 @@
     "custom": "_"
   },
   "bg_color": "#ffffff",
-  "logo": "/img/uploads/79d1f22f-fa9c-4cce-8ebd-d0db14594251.jpeg",
+  "logo": "/img/uploads/ofertasafins.png",
   "name": "Ofertas Afins ",
   "short_name": "tudo, a toda hora, em qualquer lugar :)",
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
-  "favicon": "/img/uploads/ofertas.png",
+  "favicon": "/img/uploads/ofertas2.png",
   "country_code": "BR",
   "secondary_color": "#393e46",
   "icon": "/img/uploads/ofertas.png",
