Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -16,8 +16,8 @@
   "favicon": "/img/uploads/ofertas2.png",
   "country_code": "BR",
   "secondary_color": "#393e46",
-  "icon": "/img/uploads/ofertas.png",
+  "icon": "/img/uploads/ofertasafins.png",
   "store_id": 1239,
   "description": "Preço baixo e as melhores ofertas de smartphones, notebooks, tablets, roupas, desodorantes, calçados e mais na Ofertas Afins. Aproveite!",
-  "large_icon": "/img/uploads/ofertas.png"
+  "large_icon": "/img/uploads/ofertasafins.png"
 }
